# Shilov

./: CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.rst  installation.rst  make.bat  usage.rst
src/shilov/: __init__.py  forms.py  linear_systems.py  matrices.py  operators.py  transformations.py  vectors.py
tests/: __init__.py  test_shilov.py
