[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shilov"
description = "A python library for linear algebra based on the book by George E. Shilov"
readme = "README.rst"
authors = [
  {name = "Miguel Araújo Julio", email = "julioaraujo.guel@gmail.com"}
]
maintainers = [
  {name = "Miguel Araújo Julio", email = "julioaraujo.guel@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [

]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "tox", # testing
]

[project.urls]

bugs = "https://github.com/Miguell-J/shilov/issues"
changelog = "https://github.com/Miguell-J/shilov/blob/master/changelog.md"
homepage = "https://github.com/Miguell-J/shilov"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]



[tool.setuptools.dynamic]
version = {attr = "shilov.__version__"}

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = py39, py310, py311, py312, py313, ruff
isolated_build = true

[gh]
python =
    3.13 = py313
    3.12 = py312
    3.11 = py311
    3.10 = py310
    3.9 = py39
    3.8 = py38

[testenv]
deps =
    -r{toxinidir}/requirements_dev.txt
commands =
    pytest --basetemp={envtmpdir}

[testenv:ruff]
deps =
    ruff
commands =
    ruff check .
"""